# nextmeet

./: .gitignore  CHANGELOG.md  EXAMPLES.md  INSTALL.md  LICENSE  Makefile  README.md  dune-project  nextmeet.opam  sample-credentials.json
lib/: auth.ml  calendar.ml  config.ml  dune  meet_parser.ml  time_utils.ml
test/: dune  test_calendar.ml  test_calendar_simple.ml  test_config.ml  test_integration.ml  test_meet_parser.ml  test_nextmeet.ml  test_time_utils.ml
